# homekit-lwng

./: CMakeLists.txt  LICENSE  README.md  build.sh  genqrcode.sh
cJSON/: CMakeLists.txt
http-parser/: CMakeLists.txt
include/homekit/: characteristics.h  homekit.h  tlv.h  types.h
libmdnsd/: CMakeLists.txt
src/: accessories.c  cam_backend.c  cam_backend.h  crypto.c  crypto.h  debug.h  json.c  json.h  port.c  port.h  query_params.c  server.c  storage.c  test.c  tlv.c
wolfssl/: CMakeLists.txt
wolfssl/wolfssl/: options.h
